# vrscene2json

./: .gitignore  CMakeLists.txt  README.md
src/: VrSceneParser.cpp  VrSceneParser.h  main.cpp
